
Table renter {
  renter_id integer [pk]
  display_name varchar [unique, not null]
  referring_renter_id int [ref: >? renter.renter_id]
}

Table property {
  property_id integer [pk]
  display_name varchar [not null]
  active_listing bool [not null]
  monthly_rent numeric [not null]
}

Table viewing {
  viewing_id integer [pk]
  property_id integer [not null, ref: ?> property.property_id, delete: "cascade"]
  duration_min integer [not null]
  viewing_at timestamp [not null]
}

Table amenity {
  property_id integer [not null]
  name  varchar [not null]

  indexes {
    (property_id, name) [pk]
  }
}
Ref: property.property_id <? amenity.property_id [delete:cascade]

Table renter_viewing {
  renter_id integer [not null, ref: ?> renter.renter_id, delete: "cascade"]
  viewing_id integer [not null, ref: ?> viewing.viewing_id, delete: "cascade"]

  indexes {
    (renter_id, viewing_id) [pk]
  }
}
